--- a/estilos.css
+++ b/estilos.css
@@ -6,6 +6,7 @@ body {
   background-color: lightcoral;
   display: flex;
   flex-flow: wrap;
+  flex-direction: column;
   justify-content: space-around;
   margin: 0px;
   padding: 15px;
@@ -20,6 +21,13 @@ body {
   width: 98%;
 }
 
+#hijos {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
 .hijo {
   background-color: orange;
   margin: 5px;
@@ -29,7 +37,7 @@ body {
   width: 40%;
 }
 
-#hijoDos {
+.hijoDos {
   background-color: lightgreen;
   margin: 5px;
   padding: 25px;
@@ -38,7 +46,7 @@ body {
   width: 20%;
 }
 
-#hijoTres {
+.hijoTres {
   background-color: lightblue;
   margin: 5px;
   padding: 25px;
